# uwbsnarf

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  SETUP.md  TECHNICAL.md  decawave_dwm3001cdk.overlay  dwm3001cdk.overlay  prj.conf  requirements.txt
.github/: copilot-instructions.md
include/: dw3000_driver.h  uart_output.h  uwb_scanner.h  version.h
scripts/: build.sh  flash.sh  monitor.py
src/: dw3000_driver.c  main.c  uart_output.c  uwb_scanner.c
